# hash-test

./: CMakeLists.txt  README.md
include/: djb2_hash.hpp  fnv_hash.hpp  hash_base.hpp  hash_types.hpp  loselose_hash.hpp  murmur_hash.hpp  sdbm_hash.hpp  spooky_hash.hpp
src/: hash_main.cpp
